--------------------------

Compatibility breaks
====================

* Refactor multimedia modules

Fixes and enhancements
======================

* Function datetime.total_seconds now accept instance of timedelta
* Function filesystem.from_template can now use jinja2 to generate the content
* timedelta & to_filesize Django template filters now handle empty string input

--------------------------
v8.6.0-beta -> v8.6.1-beta
--------------------------

Fixes and enhancements
======================

* Add function multimedia.ffmpeg.get_subprocess

--------------------------
v8.0.0-beta -> v8.6.0-beta
--------------------------

Minor compatibility breaks
==========================

* Rename module django.models -> django.models.mixins

Features
========

* Add module django.models.fields
* Add class validation.CleanAttributesMixin
* Add class validation.StrongTypedMixin
* Add class django.forms.RequestMixin
* Add class django.views.AddRequestToFormKwargsMixin
* Add class django.views.LoggedCookieMixin
* Add class unittest.AwareTearDownMixin
* Add function subprocess.git_add_submodule
* Add function network.http.download_ext
* Add function datetime.parts_to_time

Fixes and enhancements
======================

* Add some classes in module exception
* Add module django.urls with utility regular expressions
* Improve crypto.githash to handle reading data from a file
* Fix SaveInstanceFilesMixin (use .pk instead of .id)
* Improve datetime.str2time to handle microseconds
* Improve filesystem.try_remove to handle directories (when recursive=True)
* Improve multimedia.ffprobe.get_media_duration (return None in case of error)
* StrongTypedMixin: Allow setting arg to the default value (if set)
* Split HelpTextToPlaceholderMixin logic to allow modify behavior by inheritance
* Fix multimedia.ffmpeg.encode (convert default_in_duration to time)
* Fix multimedia.ffmpeg.encode (may return None - out_duration)
* Fix multimedia.ffmpeg.encode (skip broken out duration)