@@ -17,6 +17,7 @@ Fixes and enhancements
 * Function datetime.total_seconds now accept instance of timedelta
 * Function filesystem.from_template can now use jinja2 to generate the content
 * timedelta & to_filesize Django template filters now handle empty string input
+" Add argument create_out_directory to method multimedia.ffmpeg.FFmpeg.encode
 
 --------------------------
 v8.6.0-beta -> v8.6.1-beta
